Fixed the graphsqls for transaction page

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: $black;
+    background-color: $black !important;
     main {
         @extend %set-height;
         overflow-x: hidden !important;
