--- a/src/styles/sass/page/_wallet.scss
+++ b/src/styles/sass/page/_wallet.scss
@@ -1366,3 +1366,17 @@ div.wallet_balances {
         }
     }
 }
+
+span.download-visible {
+    visibility: visible;
+    img {
+        margin-bottom: 4px;
+    }
+}
+
+span.download-hidden {
+    visibility: hidden;
+    img {
+        margin-bottom: 4px;
+    }
+}
