Fixed the style of question marks of payment section

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -558,6 +558,9 @@
     text-transform: uppercase;
     margin-top: auto;
     margin-bottom: auto;
+    @include mq('phone', max) {
+        font-size: 10px !important;
+    }
 }
 
 .css-4ljt47-MenuList {
