--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -301,7 +301,7 @@
                 align-items: center;
                 justify-content: space-between;
                 background-color: white;
-                padding: 13px;
+                padding: 13px 8px;
                 margin-top: 8px;
                 cursor: pointer;
                 code {
