base structure of referral

--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -13,6 +13,7 @@ $mountainMeadow: #23C865;
 $dustGray: #959595;
 $pastelGreen: #5bd778;
 $grannyApple: #d6f5dd;
+$disableGray: #5E5E5E;
 
 
 // Media query breakpoints
