add style for referral

--- a/src/styles/sass/page/_referral.scss
+++ b/src/styles/sass/page/_referral.scss
@@ -1,3 +1,7 @@
-.text-green {
-    color: $green;
+div.bg-gray-50 {
+    background-color: rgba(43, 43, 43, 0.5);
+}
+
+.txt-disable-gray {
+    color: $disableGray;
 }
