--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -34,6 +34,7 @@
 @import "page/purchase/homeWithSign.scss";
 @import "page/direct-purchase";
 @import "page/presale";
+@import "page/referral";
 
 // admin style
 @import "page/admin/common";
