--- a/src/styles/sass/page/_referral.scss
+++ b/src/styles/sass/page/_referral.scss
@@ -5,3 +5,14 @@ div.bg-gray-50 {
 .txt-disable-gray {
     color: $disableGray;
 }
+
+.vh-50 {
+    height: 50vh;
+}
+
+.share {
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    padding: 17px;
+}
