--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -14,6 +14,7 @@ $dustGray: #959595;
 $pastelGreen: #5bd778;
 $grannyApple: #d6f5dd;
 $disableGray: #5E5E5E;
+$priceGray: #787878;
 
 
 // Media query breakpoints
