--- a/src/styles/sass/layout/_layout.scss
+++ b/src/styles/sass/layout/_layout.scss
@@ -139,6 +139,10 @@
     font-size: 10px;
 }
 
+.header-item {
+    white-space: nowrap;
+}
+
 @include media-breakpoint-down(lg) {
     .footer-nav {
         display: none;
