--- a/src/styles/sass/page/_referral.scss
+++ b/src/styles/sass/page/_referral.scss
@@ -16,3 +16,10 @@ div.bg-gray-50 {
     height: 100%;
     padding: 17px;
 }
+
+.border-response {
+    border-right: 2px solid #464646;
+    @include mq("tablet", max) {
+        border-right: unset;
+    }
+}
