--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -52,7 +52,7 @@ input::-webkit-contacts-auto-fill-button {
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px white
+    box-shadow: inset 0 0 6px white
 }
 
 ::-webkit-scrollbar-thumb {
