--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -1,54 +1,133 @@
 .menu {
     width: 100%;
-    position: fixed;
+    position: sticky;
     top: 0;
     padding: 28px 0 !important;
+    z-index: 100;
     background-color: #1e1e1e !important;
-    .image_div {
-        width: 50px;
+    @include mq("tablet", max) {
+        padding: 16px 0 !important;
+        height: 75px;
     }
-    .user-dropdown {
-        position: relative;
+    @include mq("phone", max) {
+        padding: 15px 0;
+    }
+    .logo {
+        width: 92px;
+        height: 35px;
+        @include mq("phone", max) {
+            width: 56px;
+            height: 21px;
+        }
+    }
+    .hamburger {
+        background: none;
+        border: none;
+        margin-left: 60px;
+        cursor: pointer;
         display: flex;
-        &:hover {
-            .user-dropdown-menu {
-                display: block;
+        flex-direction: column;
+        justify-content: center;
+        z-index: 100;
+        span {
+            background-color: #fff;
+            height: 3px;
+            margin-bottom: 8px;
+            position: relative;
+            transition: all 0.3s ease;
+            @include mq("tablet") {
+                margin-bottom: 14px;
+            }
+            &:first-child {
+                width: 27px;
+                @include mq("tablet") {
+                    width: 40px;
+                }
+            }
+            &:nth-last-child(2) {
+                width: 16px;
+                @include mq("tablet") {
+                    width: 24px;
+                }
+            }
+            &:last-child {
+                width: 24px;
+                margin-bottom: 0;
+                @include mq("tablet") {
+                    width: 36px;
+                }
             }
         }
-        &-menu {
-            position: absolute;
-            right: 0;
-            top: 51px;
-            background-color: $black;
-            border: 1px solid white;
-            z-index: 999;
-            font-variant: small-caps;
-            color: white;
+    }
+    .sign-in {
+        @include mq("phone", max) {
+            display: none;
+        }
+    }
+    .navbar-nav {
+        position: absolute;
+        right: 0;
+        top: 150px;
+        right: 400px;
+        z-index: 2;
+        .nav-link {
             font-weight: bold;
             font-size: 30px;
             line-height: 37px;
-            display: none;
-            & > li {
-                cursor: pointer;
-                border-bottom: 1px solid white;
-                transition: 500ms;
-                a {
-                    display: inline-block;
-                    padding: 12px 25px;
+            color: white;
+            padding: 17.5px 0;
+        }
+        @include mq("laptop-wide", max) {
+            top: 150px;
+            right: 150px;
+        }
+        @include mq("laptop", max) {
+            top: 100px;
+            right: 100px;
+        }
+        @include mq("tablet", max) {
+            top: 100px;
+            right: 50px;
+        }
+        @include mq("phone", max) {
+            display: flex;
+            position: absolute;
+            padding: 0 12px;
+            height: calc(100vh - 57px);
+            width: 100vw;
+            overflow: auto;
+            background-color: $black;
+            top: 57px;
+            right: 0;
+        }
+    }
+    &.active {
+        .hamburger {
+            span {
+                &:first-child {
+                    top: 11px;
+                    width: 27px;
+                    transform: rotate(45deg);
+                    @include mq("tablet") {
+                        top: 16px;
+                        width: 40px;
+                    }
+                }
+                &:nth-child(2) {
+                    opacity: 0;
                 }
                 &:last-child {
-                    border: none;
-                }
-                &:hover,
-                &:hover {
-                    a {
-                        color: rgba(white, 0.5) !important;
+                    top: -11px;
+                    width: 27px;
+                    transform: rotate(-45deg);
+                    @include mq("tablet") {
+                        width: 40px;
+                        top: -18px;
                     }
                 }
             }
         }
     }
-
     .header-btn {
         margin-right: 20px;
         font-weight: bold;
@@ -75,16 +154,14 @@
             padding: 7px 20px;
         }
     }
-
-    @include mq("tablet", max) {
-        padding: 16px 0 !important;
+    .header-item {
+        white-space: nowrap;
     }
 
     .menu__logo {
         svg {
             width: 200px;
             height: auto;
-
             @include mq("laptop") {
                 width: 270px;
             }
@@ -134,36 +211,6 @@
 
                 @include mq("laptop") {
                     width: 36px;
-                }
-            }
-        }
-    }
-
-    &.menu--active {
-        .menu__toggler {
-            z-index: 99999;
-            span {
-                &:first-child {
-                    width: 30px;
-                    top: 6px;
-                    transform: rotate(45deg);
-                    @include mq("laptop") {
-                        top: 16px;
-                        width: 40px;
-                    }
-                }
-
-                &:nth-child(2) {
-                    opacity: 0;
-                }
-
-                &:last-child {
-                    width: 30px;
-                    top: -18px;
-                    transform: rotate(-45deg);
-                    @include mq("laptop") {
-                        width: 40px;
-                    }
                 }
             }
         }
@@ -237,6 +284,33 @@
     }
 
     &.menu--active {
+        .menu__toggler {
+            z-index: 99999;
+            span {
+                &:first-child {
+                    width: 30px;
+                    top: 6px;
+                    transform: rotate(45deg);
+                    @include mq("laptop") {
+                        top: 16px;
+                        width: 40px;
+                    }
+                }
+
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+
+                &:last-child {
+                    width: 30px;
+                    top: -18px;
+                    transform: rotate(-45deg);
+                    @include mq("laptop") {
+                        width: 40px;
+                    }
+                }
+            }
+        }
         .menu__content {
             opacity: 1;
             visibility: visible;
@@ -250,20 +324,6 @@
                 }
             }
         }
-    }
-}
-
-.header-sale-cta {
-    padding: 7px 50px;
-    color: white;
-    text-transform: uppercase;
-    border: 1px solid white;
-    font-weight: bold;
-    transition: 500ms;
-    margin-right: 15px;
-    &:hover {
-        color: white;
-        opacity: 0.65;
     }
 }
 
