Added the footer in landing, signup, signin

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -348,6 +348,12 @@ ul {
     color: lightgrey !important;
 }
 
+.text-hover-green {
+    &:hover {
+        color: $green !important;
+    }
+}
+
 .vh-85 {
     height: 85vh !important;
 }
