--- a/src/styles/sass/layout/_layout.scss
+++ b/src/styles/sass/layout/_layout.scss
@@ -2,7 +2,14 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 30px;
+    height: 70px;
     background: transparent;
-    font-size: 10px;
+    font-size: 12px;
+    @include mq('laptop', max) {
+        font-size: 10px;
+    }
+    @include mq('tablet', max) {
+        position: relative;
+        height: auto;
+    }
 }
