--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -7,7 +7,7 @@
         position: relative;
         width: 100%;
         max-width: 450px;
-        margin: 0 auto;
+        margin: 50px auto;
         padding: 0 24px;
         &-head {
             font-weight: bold;
