--- a/src/styles/sass/utils/_placeholders.scss
+++ b/src/styles/sass/utils/_placeholders.scss
@@ -13,7 +13,8 @@
 %set-height2 {
     height: calc(100vh - 110px);
     @include mq("phone", max) {
-        height: calc(100vh - 175px);
+        height: auto;
+        min-height: calc(100vh - 175px);
     }
 }
 
