--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -4,7 +4,7 @@
     }
     .section-auction {
         width: 100%;
-        height: 100%;
+        height: calc(100vh - 100px);
         &__tooltip {
             margin-top: 2em;
         }
