--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: column;
         justify-content: start;
-        height: 100vh;
+        height: calc(100vh - 100px);
         @include mq("laptop", max) {
             height: 100%;
         }
@@ -62,9 +62,7 @@
         @include mq("laptop", max) {
             padding-left: 12px;
             padding-right: 12px;
-        }
-        @include mq("laptop", max) {
-            border: unset;
+            border: unset !important;
         }
         .profile-tab {
             .react-tabs__tab {
@@ -203,50 +201,6 @@
                             padding: 3px 20px;
                         }
                     }
-                }
-                .col-12 {
-                    display: none;
-                    padding: 25px 12px;
-                    @include mq("phone", max) {
-                        display: flex;
-                    }
-                    .change-pwd {
-                        font-weight: bold;
-                        font-size: 18px;
-                        line-height: 22px;
-                        letter-spacing: 0.04em;
-                        text-transform: uppercase;
-                        padding: 15px 26px;
-                        background: #1e1e1e;
-                    }
-                }
-            }
-
-            .change-password {
-                .col-6 {
-                    padding: 9px 12px;
-                    display: flex;
-                    align-items: center;
-                    @include mq("tablet", max) {
-                        padding: 25px 12px;
-                    }
-                    @include mq("phone", max) {
-                        padding-left: 0;
-                        padding-right: 0;
-                    }
-                }
-            }
-            .btn-pwd {
-                display: none;
-                font-weight: bold;
-                font-size: 18px;
-                line-height: 22px;
-                letter-spacing: 0.04em;
-                text-transform: uppercase;
-                padding: 15px 26px;
-                background: #1e1e1e;
-                @include mq("tablet", max) {
-                    display: block;
                 }
             }
             .account-security {
@@ -392,15 +346,6 @@
         .connect-wallet {
             text-align: center;
             color: white;
-            button: {
-                max-width: 400px;
-            }
-            button:disabled,
-            button[disabled] {
-                border: 1px solid #999999;
-                background-color: #1d1d1d;
-                color: #666666;
-            }
             h4 {
                 padding-bottom: 16px;
                 border-bottom: 2px solid #464646;
@@ -543,11 +488,8 @@
         }
     }
     .form-check-input {
-        border: 1px solid #ffffff;
-        background-color: $black;
         width: 18px;
         height: 18px;
-        border-radius: unset;
     }
     .form {
         padding: 18px 51px;
