fixed side margin across pages & header

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -432,3 +432,12 @@ ul {
 .font-14px {
     font-size:  14px!important;
 }
+
+.container{
+    width: initial;
+    max-width: initial;
+    @include mq("laptop-md", min) {
+        margin-left: 102px;
+        margin-right: 102px;
+    }
+}
