--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -173,6 +173,7 @@
         flex-direction: column;
         cursor: pointer;
         z-index: 100;
+        margin-left: 1.5rem;
 
         border: none !important;
         outline: none !important;
