--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -89,7 +89,7 @@
             }
         }
         .auction-left {
-            padding-right: 25px;
+            padding-right: 1.5rem;
             @include mq("tablet") {
                 display: block !important;
             }
