--- a/src/styles/sass/page/_support.scss
+++ b/src/styles/sass/page/_support.scss
@@ -12,6 +12,14 @@
     .menu {
         border-bottom: 2px solid #464646;
     }
+    .row-x{
+        margin-left: -5px;
+        margin-right: -5px;
+        &>*{
+            padding-left: 5px;
+            padding-right: 5px;
+        }
+    }
     .faq__tabs {
         display: flex;
         height: calc(100vh - 230px);
@@ -125,12 +133,6 @@
         border-bottom: 1px solid white;
         width: 62px;
     }
-    .pe-lg-10px {
-        padding-right: 0px !important;
-        @include mq("laptop") {
-            padding-right: 10px !important;
-        }
-    }
     
     .support-banner-item {
         cursor: pointer;
@@ -142,7 +144,6 @@
         }
     }
     .support-self-security-item {
-        padding: 0;
         button{
             display: flex;
             justify-content: center;
